# telegram_to_llm_bot

./: .gitignore  LICENSE  README.md  devcontainer.json  main.py  pyproject.toml  reqirements.txt  requirements.txt  utils.py
src/: main.py  main2.py  main_.py
src/prompt_templates/: system_prompt_template.txt
